--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -8,7 +8,7 @@
     position: sticky;
     top: 0;
     z-index: 999;
-    padding: 0;
+    padding: 0 !important;
 }
 
 .navbar-container {
@@ -68,7 +68,7 @@
     display: flex;
     align-items: center;
     text-decoration: none;
-    padding: 0.5rem 1rem;
+    padding: 0 1rem;
     height: 100%;
 }
 
@@ -136,7 +136,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        transform: translate(25%, 50%);
+        transform: translate(25%, 33%);
     }
 
     .menu-icon {
